deployment/kubernetes/service-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: bibify-backend
  namespace: bibify
spec:
  ports: 
    - port: 8080
  selector:
    app: bibserver
