deployment/kubernetes/service-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: bibify-frontend
  namespace: bibify
spec:
  ports: 
    - port: 8000
  selector:
    app: bibify
